--- a/Inspirations.html
+++ b/Inspirations.html
@@ -22,7 +22,7 @@
 
             <p>When it comes to creation, everything comes from a source. These sources root to the making of something original in its own right. Here are some things that inspire me.</p>
             <h2>Aesthetic</h2>
-            <p>Genrally, the look I felt to align with was the look of 2000s styled art, such as the images shown in the carousel.</p>
+            <p>Genrally, the look I felt to align with was the look of 2000s styled art, such as the images shown in About me page.</p>
 
 
 
@@ -34,7 +34,7 @@
 
             <h2>Musical Taste</h2>
             <p>Since I spend most of my freetime with music on in the background, it's safe to say that it has an influential effect on my thought process. This could also be reflected in the sense that my thought process affects the music I surround myself with, but who really cares about any of that. </p>
-            <img src="images/placehold.png" alt="">
+            <img id="punkImg" src="images/d4l2caz-14c72182-36fb-4af6-ba79-dc83a98d2f82.jpg" alt="Courtesy of Superbrogio for compiling these great bands into a collage. ">
         </section>
     </main>
 </body>
