--- a/contact.html
+++ b/contact.html
@@ -6,8 +6,8 @@
     <title>CONTACT</title>
     <link rel="stylesheet" href="stylin.css">
 </head>
-<body class="mainBG">
-    <main>
+<body>
+    <main class="mainBG">
         <header class="header">
             <a href="aboutMe.html">ABOUT ME</a>
             <a href="Inspirations.html">INSPIRATIONS</a>
