--- a/content.html
+++ b/content.html
@@ -28,7 +28,11 @@
             simplistically detailed reward.</p>
 
 
-            <p class="the-c">Welcome to the Content!</p>
+            <p class="the-c">Welcome to the Content! Hope you think it's cool.</p>
+
+            <div class="rightRound">
+                <div class="baby"></div>
+            </div>
 
 
         <p>Please enjoy this <em>fantastically</em> pending image carosoul </p>
