--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,7 @@ One or more of: Art, Drawings, Photos, Models, Music, Other Class/Personal work.
 
         <section>
             <h2>Coding Work: </h2>
-            <p>Coding projects mainly took place in the </p>
+            <p>Coding projects that took place in the Web Applications Lab</p>
         </section>
 
         <section>
@@ -44,8 +44,10 @@ One or more of: Art, Drawings, Photos, Models, Music, Other Class/Personal work.
             <h2>Creative Writing</h2>
             <h3></h3>
             <p>
-                Jurassic APA Essay
+                Jurassic Park APA Essay
             </p>
+
+
         </section>
         
         <section>
