--- a/contact.html
+++ b/contact.html
@@ -24,6 +24,8 @@
         <p>gavin.stetson23@student.cart.org</p>
         <a href="mailto:gvnstet06@gmail.com">And this is my personal email:</a>
         <p>gvnstet06@gmail.com</p>
+
+        <a href="https://github.com/Ect0spasm?tab=repositories">My Github Account</a>
     </section>
     </main>
 </body>
