--- a/portfolio.html
+++ b/portfolio.html
@@ -28,7 +28,13 @@ One or more of: Art, Drawings, Photos, Models, Music, Other Class/Personal work.
 
         <section>
             <h2>Coding Work: </h2>
-            <p>Coding projects that took place in the Web Applications Lab</p>
+            <p>Coding projects that took place in the Web Applications Lab</p> 
+
+            <ul>
+                <li>Cretaceous Cafe</li>
+                <li></li>
+                <li></li>
+            </ul>
         </section>
 
         <section>
