--- a/content.html
+++ b/content.html
@@ -28,7 +28,7 @@
             simplistically detailed reward.</p>
 
 
-            <p class="the-c">Welcome to the Content! Hope you think it's cool.</p>
+            <p class="the-c">Welcome to the Content! Hope you think it's cool. Please don't hover over the spinning shape or something <em class="fire"><strong class="smallish">zany</strong></em> will happen.</p>
 
             <div class="rightRound">
                 <div class="baby"></div>
