--- a/playlist.html
+++ b/playlist.html
@@ -3,7 +3,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Playlists</title>
+    <link rel="stylesheet" href="stylin.css">
 </head>
 <body>
     <header class="header">
@@ -14,11 +15,12 @@
         <a href="contact.html">CONTACT</a>
         <a href="home.html">GO HOME</a>
     </header>
-    <main>
+    <main class="mainBG">
         <h1>Playlists</h1>
         <section>
             <h2>And the creative twist they play on music.</h2>
             <p>I have a tendency to manipulate my music in the greatest ways possible, I do this by putting them into playlists and fitting songs in the best rhythmic order I can find. Some of these can be publically found on the youtube account Grimestucken. Now that guy is a cool fella. </p>
+            <a href="https://www.youtube.com/@grimestrucken853/playlists" target="_blank" rel="noopener noreferrer">And here they are!</a>
         </section>
     </main>
 </body>
