--- a/resume.html
+++ b/resume.html
@@ -22,7 +22,7 @@
         <p>This is a homecooked, hand-forged resumption designed by me personally.</p>
         </section>
             <section class="theFunny">
-                <a href="pdfs/Complete-Resume - Gavin Stetson.pdf">
+                <a href="pdfs/Complete-Resume - Gavin Stetson.pdf" target="_blank" rel="noopener noreferrer">
                     <img src="images/LMLOLO.png" alt="Visualization of my resume as an interactive image, linked to my pdf file.">
                     <figcaption class="madness">YOU MAD? CLICK HERE!</figcaption>
                 </a>
