--- a/home.html
+++ b/home.html
@@ -19,7 +19,7 @@
     </header>
     <main class="mainBG">
         <h1>Introductory Summary</h1>
-        <p>Hello! My name is Gavin Stetson, and I welcome you to my humble nook in the internet. In this website, you
+        <p>Hello! My name is Gavin Stetson, and I welcome you to my humble nook in the internet. In this <strong>developing</strong> website, you
             can visit details of pragmatic interactions, various achievements, and prestigious* creations. I am a
             current student at Clovis East High School graduating in 2025. I am in search of a part time job where I can
             grow with much success and provide help to the company I work for. Synchronously, I am a student at the
