--- a/portfolio.html
+++ b/portfolio.html
@@ -23,7 +23,7 @@ One or more of: Art, Drawings, Photos, Models, Music, Other Class/Personal work.
     <main class="mainBG">
         <section>
             <h1>Portfolio</h1>
-            <img src="images/AquamarineLovewatch.webp" alt="Self-made logo designed with 8-bit binary. Wow!">
+            <img src="images/Aquamarine-Lovewatch.png" alt="Self-made logo designed with 8-bit binary. Wow!">
             <p>This is the part of the place that is forwardly mentioned as the space of stored achievements. In short, these sections highlight the various categories of my skills and achievements. </p>
         </section>
 
