Needed changes: imageAccess

--- a/home.html
+++ b/home.html
@@ -12,7 +12,7 @@
     <header>
         <a href="aboutMe.html">ABOUT ME</a>
         <a href="Inspirations.html">INSPIRATIONS</a>
-        <a href="portfolio.html" id="thePortfolio">PORTFOLIO</a>
+        <a href="portfolio.html" id="thePortfolio">STUDENT LEARNING PORTFOLIO</a>
         <a href="resume.html">RESUME</a>
         <a href="contact.html">CONTACT</a>
         <!-- <a href="">content </a> -->
