--- a/portfolio.html
+++ b/portfolio.html
@@ -12,7 +12,7 @@
     <header class="header">
         <a href="aboutMe.html">ABOUT ME</a>
         <a href="Inspirations.html">INSPIRATIONS</a>
-        <a href="portfolio.html">PORTFOLIO</a>
+        <a href="portfolio.html">STUDENT LEARNING PORTFOLIO</a>
         <a href="resume.html">RESUME</a>
         <a href="contact.html">CONTACT</a>
         <a href="home.html">GO HOME</a>
@@ -24,19 +24,9 @@ Writing
 One or more of: Art, Drawings, Photos, Models, Music, Other Class/Personal work. -->
     <main class="mainBG">
         <section>
-            <h1>Portfolio</h1>
-            <img src="images/Aquamarine-Lovewatch.png" alt="Self-made logo designed with 8-bit binary. Wow!">
-            <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title"
-                    rel="cc:attributionURL"
-                    href="https://gavins-portal.netlify.app/images/Aquamarine-Lovewatch.png">Aquamarine Lovewatch</a> by
-                <a rel="cc:attributionURL dct:creator" property="cc:attributionName"
-                    href="https://gavins-portal.netlify.app/portfolio">Gavin S</a> is marked with <a
-                    href="https://creativecommons.org/publicdomain/zero/1.0/?ref=chooser-v1" target="_blank"
-                    rel="license noopener noreferrer" style="display:inline-block;">CC0 1.0<img
-                        style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"
-                        src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img
-                        style="height:22px!important;margin-left:3px;vertical-align:text-bottom;"
-                        src="https://mirrors.creativecommons.org/presskit/icons/zero.svg?ref=chooser-v1" alt=""></a></p>
+            <h1>Student Learning Portfolio</h1>
+            <img src="images/serenityInTime.png" alt="Self-made logo designed with 8-bit binary. Wow!">
+            
 
             <h2 class="gladness" class="word">500 Word Reflection:</h2>
 
