--- a/portfolio.html
+++ b/portfolio.html
@@ -25,46 +25,26 @@ One or more of: Art, Drawings, Photos, Models, Music, Other Class/Personal work.
     <main class="mainBG">
         <section>
             <h1>Student Learning Portfolio</h1>
+            <section class="unitOne">
+                <h2>Unit 1: Logo Graphic Design</h2>
             <img src="images/serenityInTime.png" alt="Self-made logo designed with 8-bit binary. Wow!">
-            
+            <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://gavins-portal.netlify.app/images/serenityInTime.png">Serenity in Time</a> by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://github.com/Ect0spasm">Gavin Stetson</a> is licensed under <a href="https://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""></a></p>
 
             <h2 class="gladness" class="word">500 Word Reflection:</h2>
 
-            <p>
-                Growing additions are to be included in this portfolio. In the meantime, there is this logo. This is a
-                binary-pixel art piece of graphic design I decidedly referred to as Aquamarine Lovewatch. It is at it's
-                core, a gradient including colors from aquamarine to teal, then black. Amidst the center of the art is a
-                simple clock, wherein it tells the time and serves as measurement for the passing of time in this
-                abstract place of vast color. To me, the logo represents the passing of time and the constant change
-                that it entails. To explain how I truly made the design, I'll have to step back a little. Visualize what
-                happened and type words that are pleasing to my eyes and mind. So far they are ugly, so I have to paste
-                and edit an excerpt of a story I made some time ago, it's related to this. <br>
-                The calmest rain gently tapped against the window, casual patters of water droplets lightly knocking on
-                the window in front of him. The constant blinking of the text cursor defied all opposition provided by
-                the blank-white expanse surrounding the document. Despite it's rebellion against this lit canvas and
-                it's beckon for more well-put symbols of grey to join the empty space, the bar became incessant for me.
-                It called for something I had null ability to provide. It was frustrating, How could something so simple
-                fail to be put into words? I felt all was for naught, to scour and comb through the repetitive
-                information of my conventionally mundane choice. Behind all the saturated hues and lightness, I felt no
-                ilks of passion for this spectrum of color. I, at this point in time, were assigned to write a
-                historically descriptive essay about colors in the palest, dullest, and most forgetful way you can
-                imagine. With a disapproving sigh, I turned away from technological tome of binary translation and
-                stared at my own bedroom ceiling. It was the first time I realized I never actually looked at it before.
-                This feeling of morose, maybe its what I get for devoting all my time to the floor. -"Settle down, you
-                typing disaster. Look up and ask yourself, what do you see in the plaster?" It was late. I was tired. My
-                mind, was tired, my body felt dull and sluggish. The grated lines of my computer screen were still
-                engrained in my eyes as I stared at the subtle textures and shapes impressed upon my ceiling. Like a
-                dream, I saw figures of familiarity come and go until… Until I got bored. I peered out of my window and
-                looked into the dark, pouring expanse surrounding the comforts of the night-lit bedroom. Amongst the dim
-                rainy environment was a rare-looking sedan with the reflective tint of an adjacent turquoise. This
-                near-aqua irradiated the surrounding rain pellets with its nostalgically bright gleams. Just as fast as
-                it revealed itself, it passed by, leaving only the blurry imprint of its coloration in my mind. I felt
-                something when I saw a shade that specific of aquamarine, something vastly familiar. <br>
-                By the way, I chose no copyright as the universal deed, because I lack the recreancy of holding it to
-                myself. They are free to take this little art piece and do what they wish with it, as they should. I
-                imagine that lossy compression would be sufficient in conveying the appearance of the logo, mainly
-                because it is just a bunch of differently colored boxes and lacks specific detailing.
+            <p class="">
+                    Growing additions are to be included in this portfolio. In the meantime, there is this logo. This is a
+                    binary-pixel art piece of graphic design I decidedly referred to as Serenity in Time. To be clear, I don't want to place a value towards this logo, I don't believe it is inherently inspiring or interesting, but inspiration goes in many directions. It can be interpreted differently by a different mind and may bring an idea or two. Like a Wizard or a Fisherman, I modestly <em>cast</em> my work with a completely open license, so that anyone can do whatever they want with the clock art. I may have entered the license info incorrectly originally, but I've fixed it. Made it more complete to my desired licensing. Provided with more detail, this logo can become something much more fleshed out and interesting. Picture a Salvador Dali painting with the melting clocks and odd landscape, that was what I was leaning towards in my mind when I thought of creating this graphic. Unfortunately, that is really hard to accomplish with pixel art and given the simplicity of the canvas along with slight disinterest in typing out colors. Overall, the graphic is a abstraction of the idea. 
+                    It is at it's
+                    core, a gradient including colors from aquamarine to teal, to dark and darker shades of blue, then black. Amidst the center of the art is a
+                    simple clock, wherein it tells the time and serves as measurement for the passing of time in this
+                    abstract place of vast color. To me, the logo represents the passing of time and the constant change
+                    that it entails.
+                    When it comes to the choice of my Creative Commons license, I chose no copyright as the universal deed, because I want it to be as open as possible to use. Regardless of the amount of detail put into this particular work, I think that all too often are people safeguarding their creations without the access being open for others to reinterpret and add upon to their own ideas. Now, this isn't present everywhere, especially in the current time, but is common enough of an occurance to be noticed almost everywhere. I
+                    imagine that lossy compression would be sufficient in conveying the appearance of the logo, mainly
+                    because it is just a bunch of differently colored boxes and lacks specific detailing. Lossy compression also serves as a great basis for transferring many small files over to other locations, so this would be a prime candidate of choice for logo files and other such digitized decorative items. I think that lossless compression is best for content that is expansive and detailed, and where it's important to see all of the details. Like a beautiful painting or an important movie. Even towards different forms of media like informational videos or lessons, the quality of what is being seen may prove to be important. Overall, this logo plays as an example in a grander perspective of file contents and treatments. Aspects of how a file is treated will be case sensitive, but knowing what you want to do with an item someone has created and actually having access to it is a tremendous support for inspiration and creating in this modern world. 
             </p>
+            </section>
         </section>
 
         <!-- <section>
