We'll make quick work of this
we swears'

--- a/home.html
+++ b/home.html
@@ -19,6 +19,9 @@
     </header>
     <main class="mainBG">
         <h1>Introductory Summary</h1>
+        <p>Click Here to Visit my 2024-2025 Student Coding Portfolio</p>
+        <a href="portfolio.html" id="thePortfolio">STUDENT LEARNING PORTFOLIO</a>
+
         <p>Hello! My name is Gavin Stetson, and I welcome you to my humble nook in the internet. In this <strong>developing</strong> website, you
             can visit details of pragmatic interactions, various achievements, and prestigious* creations. I am a
             current student at Clovis East High School graduating in 2025. I am in search of a part time job where I can
@@ -26,8 +29,8 @@
             Center for Advanced Research and Technology (CART) in the Web Applications lab to explore my curiosity in
             coding</p>
 
-        <h2>Content</h2>
-        <a href="content.html">Click here to find the <em>CONTENT</em></a>
+        <h2>"Content"</h2>
+        <a href="content.html">Click here to find some <em>CONTENT</em></a>
         <p class="small"> * Representative of things that may relate closer to content that of which is substantially commonplace.</p>
     </main>
 </body>
