--- a/portfolio.html
+++ b/portfolio.html
@@ -25,26 +25,9 @@ One or more of: Art, Drawings, Photos, Models, Music, Other Class/Personal work.
     <main class="mainBG">
         <section>
             <h1>Student Learning Portfolio</h1>
-            <section class="unitOne">
-                <h2>Unit 1: Logo Graphic Design</h2>
-            <img src="images/serenityInTime.png" alt="Self-made logo designed with 8-bit binary. Wow!">
-            <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://gavins-portal.netlify.app/images/serenityInTime.png">Serenity in Time</a> by <a rel="cc:attributionURL dct:creator" property="cc:attributionName" href="https://github.com/Ect0spasm">Gavin Stetson</a> is licensed under <a href="https://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""></a></p>
-
-            <h2 class="gladness" class="word">500 Word Reflection:</h2>
-
-            <p class="">
-                    Growing additions are to be included in this portfolio. In the meantime, there is this logo. This is a
-                    binary-pixel art piece of graphic design I decidedly referred to as Serenity in Time. To be clear, I don't want to place a value towards this logo, I don't believe it is inherently inspiring or interesting, but inspiration goes in many directions. It can be interpreted differently by a different mind and may bring an idea or two. Like a Wizard or a Fisherman, I modestly <em>cast</em> my work with a completely open license, so that anyone can do whatever they want with the clock art. I may have entered the license info incorrectly originally, but I've fixed it. Made it more complete to my desired licensing. Provided with more detail, this logo can become something much more fleshed out and interesting. Picture a Salvador Dali painting with the melting clocks and odd landscape, that was what I was leaning towards in my mind when I thought of creating this graphic. Unfortunately, that is really hard to accomplish with pixel art and given the simplicity of the canvas along with slight disinterest in typing out colors. Overall, the graphic is a abstraction of the idea. 
-                    It is at it's
-                    core, a gradient including colors from aquamarine to teal, to dark and darker shades of blue, then black. Amidst the center of the art is a
-                    simple clock, wherein it tells the time and serves as measurement for the passing of time in this
-                    abstract place of vast color. To me, the logo represents the passing of time and the constant change
-                    that it entails.
-                    When it comes to the choice of my Creative Commons license, I chose no copyright as the universal deed, because I want it to be as open as possible to use. Regardless of the amount of detail put into this particular work, I think that all too often are people safeguarding their creations without the access being open for others to reinterpret and add upon to their own ideas. Now, this isn't present everywhere, especially in the current time, but is common enough of an occurance to be noticed almost everywhere. I
-                    imagine that lossy compression would be sufficient in conveying the appearance of the logo, mainly
-                    because it is just a bunch of differently colored boxes and lacks specific detailing. Lossy compression also serves as a great basis for transferring many small files over to other locations, so this would be a prime candidate of choice for logo files and other such digitized decorative items. I think that lossless compression is best for content that is expansive and detailed, and where it's important to see all of the details. Like a beautiful painting or an important movie. Even towards different forms of media like informational videos or lessons, the quality of what is being seen may prove to be important. Overall, this logo plays as an example in a grander perspective of file contents and treatments. Aspects of how a file is treated will be case sensitive, but knowing what you want to do with an item someone has created and actually having access to it is a tremendous support for inspiration and creating in this modern world. 
-            </p>
-            </section>
+                <li><a href="SLP-unitOne.html">Unit I: Logo Graphic Design</a></li>
+                <li><a href="SLP-unitTwo.html">Unit II: Streaming Service</a></li>
+                <li>Unit III: Upcoming</li>
         </section>
 
         <!-- <section>
