--- a/SLP-unitTwo.html
+++ b/SLP-unitTwo.html
@@ -36,6 +36,7 @@
                 <a href="http://school.eb.com/levels/high/article/digital-divide/609569">"Digital divide." Britannica School, Encyclopædia Britannica, 17 Nov. 2014.school.eb.com/levels/high/article/digital-divide/609569. Accessed 20 Oct. 2024.</a>
             </p>
             <img src="images/faultTolerance.png" alt="this needs cc">
+            <p xmlns:cc="http://creativecommons.org/ns#" xmlns:dct="http://purl.org/dc/terms/"><a property="dct:title" rel="cc:attributionURL" href="https://gavins-portal.netlify.app/images/faultTolerance.png">faultTolerance</a> by <span property="cc:attributionName">Gavin Stetson</span> is licensed under <a href="https://creativecommons.org/licenses/by/4.0/?ref=chooser-v1" target="_blank" rel="license noopener noreferrer" style="display:inline-block;">CC BY 4.0<img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/cc.svg?ref=chooser-v1" alt=""><img style="height:22px!important;margin-left:3px;vertical-align:text-bottom;" src="https://mirrors.creativecommons.org/presskit/icons/by.svg?ref=chooser-v1" alt=""></a></p>
             </section>
         </section>
 </body>
