--- a/SLP-unitTwo.html
+++ b/SLP-unitTwo.html
@@ -10,7 +10,7 @@
     <header class="header">
         <a href="aboutMe.html">ABOUT ME</a>
         <a href="Inspirations.html">INSPIRATIONS</a>
-        <a href="portfolio.html">STUDENT LEARNING PORTFOLIO</a>
+        <a href="portfolio.html">PORTFOLIO</a>
         <a href="resume.html">RESUME</a>
         <a href="contact.html">CONTACT</a>
         <a href="home.html">GO HOME</a>
