--- a/portfolio.html
+++ b/portfolio.html
@@ -27,7 +27,7 @@ One or more of: Art, Drawings, Photos, Models, Music, Other Class/Personal work.
             <h1>Student Learning Portfolio</h1>
                 <li><a href="SLP-unitOne.html">Unit I: Logo Graphic Design</a></li>
                 <li><a href="SLP-unitTwo.html">Unit II: Streaming Service</a></li>
-                <li>Unit III: Upcoming</li>
+                <li><a href="SLP-unitThree.html">Unit III: App Purpose and Function</a></li>
         </section>
 
         <!-- <section>
