--- a/SLP-unitThree.html
+++ b/SLP-unitThree.html
@@ -37,8 +37,22 @@
 
             <h2 class="gladness" class="word">SECTION 3</h2>
 
+            <!-- https://studio.code.org/projects/applab/BMgAXMZotueFWsAPR6HmQv7LLhbcId9hgPH-475TSJQ
+              -->
+            <a href="https://studio.code.org/projects/applab/BMgAXMZotueFWsAPR6HmQv7LLhbcId9hgPH-475TSJQ" target="_blank"> The Application</a>
+                <h3>Strong Bad:</h3>
             <p>
-                [Commence the Progression]
+                "Saying things here"
+            </p>
+
+            <h3>The Concept of Rod Sterling:</h3>
+            <p>
+                "Imagine if you will, a world where the only limitations of creation are that of the human mind. A world where technology has advanced itself to a point of near incomprehensible reach. In this place, the innovative control of the human essence is equally present as it is absent. Meet (name of app), the product of a student's yearn to create. This yearn has led to an application that of which scribes and accounts for the stereotypes of fashion through time. Little do the users know, that in viewing this application they have traversed into, the Twilight Zone."
+            </p>
+
+            <h3>Red Spy:</h3>
+            <p>
+                Speaker snorts Frenchly, “Tasteful. It is somewhat comical in it's pure… silliness. A true savant such as myself would know that there is a delicate equilibrium to fashion, but anything goes in this rite of passage."
             </p>
             </section>
         </section>
