--- a/SLP-unitThree.html
+++ b/SLP-unitThree.html
@@ -42,13 +42,13 @@
             <a href="https://studio.code.org/projects/applab/BMgAXMZotueFWsAPR6HmQv7LLhbcId9hgPH-475TSJQ" target="_blank"> The Application</a>
                 <h3>Strong Bad's Email:</h3>
             <p>
-                "] Well, this is it. The GREATEST fashion app of all time!. Well, it would be if I were inculed in it. Think about all the rad outfits and Halloween 'stumes I could've been wearing for the photos. But in the end, it's ok, cuz I have my VERY OWN websitey applicatshun and it's available to visit right now! Just go to W W- uh W dot DANGERESQUE dot com. Was that it? Or was it org. Or was it net? Oh No I Don't Remember! <br>
+                " ] Well, this is it. The GREATEST fashion app of all time! Well, it would be if I were incuded in it. Just think about all the rad outfits and Halloween 'stumes I could've been wearing for the photos. But in the end, it's ok, cuz I have my VERY OWN websitey applicatshun and it's available to visit right now! Just go to W W- uh, W dot DANGERESQUE dot com. Was it that? Or was it org. Or was it net? Oh No I Don't Remember! <br>
                     -Strong Bad"
             </p>
 
             <h3>The Concept of Rod Sterling:</h3>
             <p>
-                "Imagine if you will, a world where the only limitations of creation are that of the human mind. A world where technology has advanced itself to a point of near incomprehensible reach. In this place, the innovative control of the human essence is equally present as it is absent. Enter <em>Fenzied Trendies</em>, the product of a student's yearn to create. This yearn has led to an application that of which scribes and accounts for various stereotypes of fashion throughout time. Little do the users know, that in traversing through this application they have traversed themselves into, the Twilight Zone."
+                "Imagine if you will, a world where the only limitations to create are that of the human mind. A world where technology has advanced itself to a point of near incomprehensible reach. In this place, the innovative control of the human essence is equally present as it is absent. Enter <em>Frenzied Trendies</em>, the product of a student's yearn to create. This yearn has led to an application that of which scribes and accounts for various stereotypes of fashion throughout time. Little do the users know, that in traversing through this application they have traversed themselves into, the Twilight Zone."
             </p>
 
             <h3>Red Spy:</h3>
