--- a/portfolio.html
+++ b/portfolio.html
@@ -28,6 +28,7 @@ One or more of: Art, Drawings, Photos, Models, Music, Other Class/Personal work.
                 <li><a href="SLP-unitOne.html">Unit I: Logo Graphic Design</a></li>
                 <li><a href="SLP-unitTwo.html">Unit II: Streaming Service</a></li>
                 <li><a href="SLP-unitThree.html">Unit III: App Purpose and Function</a></li>
+                <li><a href="SLP-unitFour.html">Unit IV: Marketing to Users</li>
         </section>
 
         <!-- <section>
