--- a/portfolio.html
+++ b/portfolio.html
@@ -29,6 +29,7 @@ One or more of: Art, Drawings, Photos, Models, Music, Other Class/Personal work.
                 <li><a href="SLP-unitTwo.html">Unit II: Streaming Service</a></li>
                 <li><a href="SLP-unitThree.html">Unit III: App Purpose and Function</a></li>
                 <li><a href="SLP-unitFour.html">Unit IV: Marketing to Users</li>
+                <li><a href="SLP-unitFive.html">Unit V: Crowdsourcing Data</li>
         </section>
 
         <!-- <section>
