--- a/portfolio.html
+++ b/portfolio.html
@@ -30,6 +30,8 @@ One or more of: Art, Drawings, Photos, Models, Music, Other Class/Personal work.
                 <li><a href="SLP-unitThree.html">Unit III: App Purpose and Function</a></li>
                 <li><a href="SLP-unitFour.html">Unit IV: Marketing to Users</li>
                 <li><a href="SLP-unitFive.html">Unit V: Crowdsourcing Data</li>
+                <li><a href="SLP-unitSix.html">Unit VI: Theme Song</li>
+            
         </section>
 
         <!-- <section>
